package tp2ej3;

public class Moto extends Vehiculo {

	public Moto(String marca, int modelo, String patente, float precio, int kilometraje, Dueño dueño) {
		super(marca, modelo, patente, precio, kilometraje, dueño);
		// TODO Auto-generated constructor stub
	}

}